--- a/blog.html
+++ b/blog.html
@@ -17,13 +17,16 @@
                 <ul>
                     <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="blog.html" class="active">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="profile.html">Home</a></li>
 
                 </ul>
             </nav>
         </div>
+    </div>
+    <div class="studychoice-header">
+        <h1>Welcome to my Blog</h1>
     </div>
 
     <div class="blog-container">
@@ -33,7 +36,7 @@
             </div>
             <div class="card__body">
                 <span class="tag tag-blue">IT</span>
-                <h4>My study Choice</h4>
+                <h4><a href="studychoice.html">My study Choice</a></h4>
                 <p>I chose to study ICT because it is interesting and allows me to be flexible. I don't need to focus on
                     only one field of the IT world.</p>
             </div>
@@ -44,7 +47,7 @@
             </div>
             <div class="card__body">
                 <span class="tag tag-red">IT</span>
-                <h4>Personal SWOT-Analysis</h4>
+                <h4> <a href="swotanalysis.html">Personal SWOT-Analysis</a></h4>
                 <p>One of my strengths is my curiosity. It comes in handy when I don't know how to write a certain part
                     of my code and need to do research.</p>
             </div>
@@ -55,7 +58,7 @@
             </div>
             <div class="card__body">
                 <span class="tag tag-red">IT</span>
-                <h4>Programming experience</h4>
+                <h4><a href="progexp.html">Programming experience</a></h4>
                 <p>During my last two years at my school, I made an app for the CAS coordinator. It was intended to help
                     her manage the student's work and to give better advice.</p>
             </div>
@@ -69,7 +72,7 @@
             </div>
             <div class="card__body">
                 <span class="tag tag-blue">IT</span>
-                <h4>First feedback</h4>
+                <h4><a href="feedback.html">First feedback</a></h4>
                 <p>Today we were put in groups and my group was of four people. We booked a study room in the university
                     and each of us presented our projects. </p>
             </div>
@@ -80,7 +83,7 @@
             </div>
             <div class="card__body">
                 <span class="tag tag-red">IT</span>
-                <h4>The ICT field</h4>
+                <h4><a href="ictfield.html">The ICT field </a></h4>
                 <p>IBM is active in several areas of the technology business. They offer a variety of IT services, such
                     as consulting, cloud computing, cybersecurity, and managed services.</p>
             </div>
