--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@
             <nav>
                 <h1>Nikol Alexandrova</h1>
                 <ul>
-                    <li><a href="dashboard.html">Dashboard</a></li>
+                    <li><a href="dashboard.html" class="active">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
