--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
                     <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="aboutme.html" class="active">About Me</a></li>
                     <li><a href="profile.html">Home</a></li>
 
                 </ul>
@@ -40,7 +40,7 @@
                         and Theory of Knowledge. In my free time I go out with friends, read and watch movies/TV series.
                         Some of my favourire books are Rich Dad Poor Dad
                         and Pride and Prejudice. </p>
-                        
+
                     <!-- ------------Tab-Titles---------- -->
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
