--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
                 <h1>Nikol Alexandrova</h1>
                 <ul>
                     <li><a href="dashboard.html">Dashboard</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="faq.html" class="active">FAQ</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="profile.html">Home</a></li>
