--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
-                    <li><a href="profile.html">Home</a></li>
+                    <li><a href="profile.html" class="active">Home</a></li>
                 </ul>
             </nav>
             <!-- -----------------Icons and btn------------- -->
