--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="blog-background">
     <div id="header1">
         <div class="container">
             <nav>
@@ -27,6 +27,9 @@
     </div>
     <div class="studychoice-header">
         <h1>Welcome to my Blog</h1>
+    </div>
+    <div class="blog-img-2">
+        <img src="/Images/arrow-final.png" alt="">
     </div>
 
     <div class="blog-container">
@@ -91,7 +94,7 @@
     </div>
 
 </body>
-<footer>
+<footer class="footer-blog">
     <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
 </footer>
 
