--- a/faq.html
+++ b/faq.html
@@ -94,7 +94,7 @@
         }
     </script>
     <!-- ---------------Footer------------- -->
-    <footer class="faq-footer">
+<footer>
         <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
     </footer>
 </body>
