--- a/profile.html
+++ b/profile.html
@@ -90,12 +90,14 @@
                 <img src="/Images/HZ-logo-EN-removebg-preview.png" alt="">
             </div>
         </div>
+
+<footer class="footer-profile">
+    <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
+</footer>
     </section>
 
     <!-- Footer-->
+    
 </body>
-<footer>
-    <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
-</footer>
 
 </html>
