--- a/progexp.html
+++ b/progexp.html
@@ -24,6 +24,33 @@
             </nav>
         </div>
     </div>
+    <section class="experience-text">
+        <h1>Programming experience</h1>
+        <h3>What is my programming experience?</h3>
+        <p>During my last two years at my school, I made an app for the CAS coordinator. It was intended to help her
+            manage the student's work and to give better advice. I made the app with IntelliJ IDEA and used the
+            programming language Java. <br> </p>
+
+        <h3>So far I have worked with: <br> </h3>
+        <ul class="bullet-list">
+            <li>Arrays - One-dimensional, two-dimensional</li>
+            <li>ArrayList</li>
+            <li>Stacks</li>
+            <li>Queues</li>
+            <li>Linked List</li>
+            <li>Binary trees</li>
+        </ul>
+        <p> <br> Additionally, I learned SQL and now can work with mySQL.</p>
+        <h1>Projects</h1>
+        <div class="cas-image">
+            <img src="/Images/Black White Minimalist SImple Monogram Typography Logo.png" alt="">
+        </div>
+        <div>
+            <a download href="/Images/InternalAssesment 2/" class="app-download">Download .zip</a>
+        </div>
+    </section>
+
+
 </body>
 <footer>
     <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
