--- a/swotanalysis.html
+++ b/swotanalysis.html
@@ -24,42 +24,54 @@
             </nav>
         </div>
     </div>
-    <div class="swot-h1">
-        <h1>Personal SWOT-Analysis</h1>
-    </div>
-    <div class="swot-img">
-        <img src="/Images/IMG_0A148E862F57-1 2.jpeg" alt="">
-    </div>
-    <div class="swotanalysis">
-    <div class="strengths">
-        <h2>Strengths</h1>
-            <p>One of my strengths is my curiosity. It comes in handy when I don't know how to write a certain part of
-                my code and need to do research. Moreover, I am flexible, which is very useful when my code doesn't
-                work, because I try to think of other ways to achieve my final goal.</p>
-    </div>
+    <section class="swot-background">
+        <section class="swot-border">
 
-    <div class="weaknesses">
-        <h2>Weaknesses</h1>
-            <p>I struggle with organization. It has never impacted my performance until now, however, it is hard for me
-                to plan the structure of my code beforehand.
-            </p>
-    </div>
-</div>
-<div class="swotanalysis-2">
-
-    <div class="threads">
-        <h2>Threads</h1>
-            <p>One of the obstacles I face is that I wait until the last moment to do my assignments. This could be
-                crucial for the success of my studies. That's why I will be focus on that and try to change it now that
-                I at university. </p>
-    </div>
-    <div class="opportunities">
-        <h2>Opportunities</h1>
-            <p>If I prioritise my weaknesses it will allow me to work on them more and improve in these fields. This
-                could be very helpful when it comes to working in a company. This also includes stepping outside of my
-                comfort zone. If I do that I would be able to make my weaknesses an opportunity.</p>
+            <div class="swot-h1">
+                <h1>Personal SWOT-Analysis</h1>
             </div>
-</div>
+            <div class="swot-img">
+                <img src="/Images/IMG_0A148E862F57-1 2.jpeg" alt="">
+            </div>
+            <div class="swotanalysis">
+                <div class="strengths">
+                    <h2>Strengths</h1>
+                        <p>One of my strengths is my curiosity. It comes in handy when I don't know how to write a
+                            certain part of
+                            my code and need to do research. Moreover, I am flexible, which is very useful when my code
+                            doesn't
+                            work, because I try to think of other ways to achieve my final goal.</p>
+                </div>
+
+                <div class="weaknesses">
+                    <h2>Weaknesses</h1>
+                        <p>I struggle with organization. It has never impacted my performance until now, however, it is
+                            hard for me
+                            to plan the structure of my code beforehand.
+                        </p>
+                </div>
+            </div>
+            <div class="swotanalysis-2">
+
+                <div class="threats">
+                    <h2>Threats</h1>
+                        <p>One of the obstacles I face is that I wait until the last moment to do my assignments. This
+                            could be
+                            crucial for the success of my studies. That's why I will be focus on that and try to change
+                            it now that
+                            I at university. </p>
+                </div>
+                <div class="opportunities">
+                    <h2>Opportunities</h1>
+                        <p>If I prioritise my weaknesses it will allow me to work on them more and improve in these
+                            fields. This
+                            could be very helpful when it comes to working in a company. This also includes stepping
+                            outside of my
+                            comfort zone. If I do that I would be able to make my weaknesses an opportunity.</p>
+                </div>
+            </div>
+        </section>
+    </section>
 
 </body>
 <footer>
