--- a/studychoice.html
+++ b/studychoice.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="study-background">
     <div id="header1">
         <div class="container">
             <nav>
